Migrate to Java 17 + Spring Boot 3
Co-Authored-By: Samir Chaudhry <schaudhry123@gmail.com>